--- a/hosts.yml
+++ b/hosts.yml
@@ -1,7 +1,2 @@
-[72.31.28]170 ansible_user=root ansible_python_interpreter=/usr/bin/python3.9
-[Application]
-#172.31.3.81 ansible_python_interpreter=/usr/bin/python3.9
-172.31.3.81 ansible_user=root ansible_python_interpreter=/usr/bin/python3.9
-[Tomcat]
-172.31.29.169 ansible_user=root ansible_python_interpreter=/usr/bin/python3.9
-~                                                                                                                                                                 ~                                                                             
+[jenkins]
+172.31.29.169
